--- a/src/styles/ArtistHeader.styl
+++ b/src/styles/ArtistHeader.styl
@@ -53,7 +53,7 @@
   font-size: 1.2em
   bottom: 1.3em
   left: 1.35em
-  right: 1.5em
+  right: 1.35em
 }
 
 .artist-name,
@@ -68,7 +68,7 @@
   display: inline-block
   height: 0.8em
   width: 0.6em
-  margin: 0 .3em -0.05em 0
+  margin: 0 .4em -0.05em .1em
   background-image: url('assets/location-icon.svg')
   background-size: contain
   background-position: center
@@ -124,6 +124,6 @@
 
 @media(max-device-width: 400px), (max-width: 600px) {
   .artist-header {
-    font-size: .8em
+    font-size: .9em
   }
 }
